--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "18.3.0",
     "react-dom": "18.3.0",
     "axios": "1.7.0",
-    "zustand": "4.5.0"
+    "zustand": "4.5.0",
+    "@supabase/supabase-js": "2.39.0",
+    "@supabase/auth-helpers-nextjs": "0.8.7"
   },
   "devDependencies": {
     "@types/node": "20.11.0",
