chore(tsconfig): align with Next.js defaults (jsx:preserve, allowJs, incremental, next plugin)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,17 @@
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
+    "allowJs": true,
+    "incremental": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
+  "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts", ".next/types/**/*.ts"],
+  "plugins": [{ "name": "next" }]
   "exclude": ["node_modules"]
 }
