--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.3.0",
     "react-dom": "18.3.0",
     "axios": "1.7.0",
-    "zustand": "4.5.0"
+    "zustand": "4.5.0",
+    "@vercel/analytics": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "20.11.0",
