fix: Resolve TypeScript errors and add proper type annotations
- Add React imports to all components
- Fix event handler type annotations (React.ChangeEvent, React.MouseEvent, etc.)
- Add proper type annotations for array methods (map, filter)
- Create next-env.d.ts for Next.js type declarations
- Add folder management functionality to dashboard-files.tsx
- Fix unused setFolders variable by implementing folder creation feature
- Update tsconfig.json to include types directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts", ".next/types/**/*.ts"],
+  "include": ["**/*.ts", "**/*.tsx", "**/*.d.ts", ".next/types/**/*.ts", "types/**/*.d.ts"],
   "plugins": [{ "name": "next" }],
   "exclude": ["node_modules"]
 }
